# RSCS

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  TODO.md  build-release.bat  build-release.sh  build.bat  build.rs  build.sh  dev  dev.sh  fix_gitignore_issue.sh  format.bat  format.sh  get-lines-of-code.bat  get-lines-of-code.ps1  install_deps.bat  run-built-exe.bat  rustfmt.toml  setup.bat  vc_runtime.bat
.github/: dependabot.yml
.github/workflows/: codeql.yml  rust.yml
assets/: Header.ai  Logo.ai
lib/: convert_endings.ps1  formatting.sh  json_formatting.ps1  lib.sh  move_assets.ps1  move_assets.sh  move_json_files.ps1  move_json_files.sh  move_vc_runtime.ps1  move_vc_runtime.sh
menu_options/: debloat-only.json  front-desk-machine.json  full-install.json  station-machine.json  template-menu-option.json
src/: core.rs  function.rs  handles.rs  main.rs  utils.rs
src/conf/: enums.rs  mod.rs  structs.rs  vars.rs
src/core/: api.rs  helper.rs  user.rs
src/core/command/: powershell.rs
src/core/helper/winget/: install.rs  remove.rs
src/core/process/: explorer.rs
src/core/structs/: config.rs  theme.rs
src/core/user/: sudo.rs
src/function/: backups.rs  debloat.rs  programs.rs  tweaks.rs
src/function/debloat/: manual.rs  powershell.rs
src/function/debloat/bcuninstaller/: remove.rs
src/function/programs/: winget.rs
src/function/tweaks/: SCRIPT_TEMPLATE  handles.rs  power.rs
src/function/tweaks/power/: ultimate_powerplan.rs
src/function/utils/: explorer.rs  mod.rs
src/system/: mod.rs
src/system/manage/: backups.rs  mod.rs
src/system/programs/: mod.rs
src/system/tweaks/: README.md  SCRIPT_TEMPLATE  handles.rs  mod.rs  templates.rs
src/system/utils/: explorer.rs  mod.rs  templates.rs
src/testing/: mod.rs
src/tweaks/: mod.rs  powershell.rs
src/tweaks/powershell/: disable_telemetry.rs  mod.rs  prefer_ipv4.rs  ps7.rs  rclick_end_task.rs
src/types/: install.rs  mod.rs  remove.rs  skip.rs
src/utils/: calc.rs  errors.rs  files.rs  message.rs  mod.rs  progress.rs  update.rs  user.rs  wait.rs
src/winget/: mod.rs
(+70 files in other folders)
