[package]
name = "RSCS"
description = "CLI program for configuring machines in the West-Mec IT Security Repair Shop (Nerd Heard)."
authors = ["Caden Finkelstein <me@cadenf.com>"]
version = "0.0.3"
edition = "2024"
homepage = "https://github.com/wmec-it/RSCS"
repository = "https://github.com/wmec-it/RSCS"
documentation = "https://github.com/wmec-it/RSCS"
readme = "README.md"
categories = ["configuration", "utility", "cli"]
build = "build.rs"
license-file = "LICENSE"

[dependencies]
colored_text = "0.3.0"
crossterm = "0.29.0"
terminal-menu = "3.1.0"
base64 = "0.22"

[build-dependencies]
winresource = "0.1.28"

[features]
bambulabs = []