[package]
name = "RSCS"
description = "CLI program for configuring machines in the West-Mec IT Security Repair Shop (Nerd Heard)."
authors = ["Caden Finkelstein <me@cadenf.com>"]
version = "0.0.3"
edition = "2024"
homepage = "https://github.com/wmec-it/RSCS"
repository = "https://github.com/wmec-it/RSCS"
documentation = "https://github.com/wmec-it/RSCS"
readme = "README.md"
categories = ["configuration", "utility", "cli"]
build = "build.rs"
license-file = "LICENSE"

[dependencies]
colored_text = "0.3.0"
crossterm = "0.29.0"
terminal-menu = "3.1.0"
base64 = "0.22"

[build-dependencies]
winresource = "0.1.30"

[features]
bambulabs = []

[profile.dev]
opt-level = 0
overflow-checks = true
debug = true
debug-assertions = true
strip = "none"
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
overflow-checks = false
strip = "none"
debug = false
debug-assertions = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 8
rpath = false

[profile.no-lto-release]
inherits = "release"
opt-level = 3
overflow-checks = false
strip = "none"
debug = false
debug-assertions = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 8
rpath = false

[profile.dev.package."*"]
opt-level = 0

[profile.release.package."*"]
opt-level = 3